www/css/style.css
/* Empty. Add your own CSS if you like */

/* GENERAL */
.hamburger {
	background-color:transparent;
	position:absolute;
	top:0px;
	color:#ffffff;
	font-size:35px;
	margin-left:20px;
	padding-left:0px;
	border-width:0px;
}

.primary-button {
	color: #ffffff;
	background-color:#ed5f5e;
	font-family: Helvetica Neue, Helvetica;
	font-size: 15px;
	font-weight: bold;
	width:88%;
	text-align:center;
	height: 35px;
	margin-left:6%;
	margin-right:6%;
	text-shadow:none;
	border:none;
	box-shadow:none;
    border-radius: 4px;
    opacity: 0.9;
}

.product-desc-container {
	color: #ffffff;
	font-family: Helvetica Neue;
	margin-left: 20px;
	position:absolute; 

}

.big-header {
	padding-top: 16%;
	font-size: 30px;
	font-weight: light;
	font-align: left;
}

.small-header {
	padding-top:5%;
	font-size: 20px;
	font-weight: light;
	font-align: left;
	opacity:0.75;
}

.product-description{
	padding-top:5%;
	font-size: 15px;
	font-weight: thin;
	font-align: left;
	width:60%;
}

.slider {
	height:100%;
}

.scroll {
	height:100%;
}

.fullscreen-image {
   	background-size: cover;
   	background-repeat: no-repeat;
   	background-position: center;
	height:100%;
}

.slider-pager {
 	color: #000; 
 	margin-bottom:15%;
}
.slider-pager-page.active {
	color: #ffffff;
}

/* PRODUCTS PAGE */
.price-container {
	width:30%;
	display:inline-block;
  	vertical-align:middle;
}

.deadline-msg {
	width:40%;
	font-size:12px;
	display:inline-block;
  vertical-align:middle;
}

.arrow-btn {
	display:inline-block;
	font-size:22px;
  	vertical-align:middle;
  	text-align:right;
  	background-color:transparent;
	border:none;
	color:#ffffff;
	margin-left:5%;
}

.price-deadline-container {
	position:absolute;
	margin-left:20px;
	color:#ffffff;
	font-size:40px;
	margin-top:120%;
	height:50px;
	font-weight:ultralight;
	font-family: Helvetica Neue, Helvetica;
	vertical-align:middle;
}

.dollar-sign {
	float:left;
	width:20px;
	font-size:20px;
	vertical-align:top;
}

.product-price {
	float:left;
	width:70px;
}

#products-booking-btn {
	position:absolute;
	top:90%;
}

/* BOOKINGS PAGE */
.scroll-bar-indicator
{
	display: none;
}

.booking-container {
	position:absolute;
	width:100%;
	height:300px;
	margin-top:75%;
	background-color:#ffffff;
	background: rgba(250, 250, 250, 0.85);
}

.date-container {
	margin-left:6%;
}

.date-container button {
	width:60px;
}

.date-time-selector {
	height:50px;
}

.date-time-selector .active
{
    border-color: red;
    z-index: 1;
    color:red;
}

#address-btn-left {
	float:left;
}

#address-btn-right {
	float:right;
}

.address-selector .active {
	border-color: red;
    color:red;
}

#day-of-week {
	font-size:12px;
	margin-bottom:-5px;
}

#time-of-day {
	font-size:12px;
}

#month-day {
	font-size:8px;
}

.booking-container div button {
	border-right: solid #D6D6D6;
	border-bottom:solid #D6D6D6;
	border-width:1px;
	border-color:#D6D6D6;
	background-color:#ffffff;
	color:#D6D6D6;
	height:40px;
	box-shadow:none;
}

.booking-sub-header {
	text-align:center;
	margin-top:3%;
	margin-bottom:3%;
	font-weight:bold;
}

.horizontal-divider {
	margin-top:8px;
	width:85%;
}

#booking-confirm-btn {
	margin-top:5%;
}

.address-selector {
	margin-left:6%;
	margin-right:6%;
}

.address-btn{
	width:48.3%;
}

.address-text {
	font-size:8px;
}

.address-text-placeholder {
	font-size:8px;
}

.address-type {
	font-size:12px;
}

.scroll { 
  min-width: 100%;
}


/* PRODUCT DEATILS */
.user-text-container {
	margin-left:5%;
	margin-right:5%;
	margin-bottom:20px;
	margin-top:15px;
	background-color:#ffffff;
	color:#D6D6D6;
}

.user-info-container {
	position:absolute;
	margin-top:270px;
	width:100%;
	height:10%;
}

.user-profile-image {
	float:left;
	width:25%;
	height:50px;
}

.img-circle {
	height:50px;
	width:50px;
    border-radius: 50%;
    background-size:cover;
    margin-left:17%;
 	border: 1.5px solid #ffffff;
}

.img-small-circle {
	position:absolute;
	height:17px;
	width:17px;
    border-radius: 50%;
    background-size:cover;
    margin-left:4%;
    margin-top:10%;
 	border: 1.5px solid #ffffff;
 	background-color:#ffffff;
 	background-image: url('https://cdn1.iconfinder.com/data/icons/simple-icons/4096/instagram-4096-black.png');
}

.user-name {
	float:left;
	width:75%;
	height:50px;
	line-height: 50px;
	color:#ffffff;
}

.image-container {
	background-size: cover;
   	background-repeat: no-repeat;
   	background-position: center;
	height:325px;
	width:100%;
}

.product-info-container {
	height:20%;
	width:100%;
	background:rgba(0, 0, 0, 0.2);
	position:absolute;
}

.product-text-container {
	padding-top:10%;
	margin-left:5%;
	margin-right:5%;
	color:#ffffff;
}

.product-name {
	font-size:30px;
	margin-bottom:4%;
}

.product-hashtags {
	color:#D6D6D6;
	font-size:18px;
}

#product-details-confirm-btn {
	position:fixed;
	bottom:6%;
}

/* EDIT ADDRESS MODAL */
.edit-address-container {
	position:absolute;
	height:270px;
	width:100%;
	background-color:#ffffff;
	background: rgba(250, 250, 250, 0.85);
	margin-top:70%;
}

#add-address-title {
	text-align:center;
	margin-top:5%;
	margin-bottom:5%;
}

.user-text-input {
	width:90%;
	margin-left:5%;
	margin-right:5%;
	border-radius:5px;
	margin-bottom:5%;
}


.state-zip-container {
	width:90%;
	margin-left:5%;
	margin-right:5%;
	background-color:blue;
}

.edit-state {
	float:left;
	width:45%;
	border-radius:5px;
}

.edit-zipcode {
	float:left;
	width:45%;
	margin-left:10%;
	border-radius:5px;
}

.confirm-address-btn {
	margin-top:5%;
}


/* COMPLETE PAGE */

#appt-info-container {
	position:absolute;
	margin-top:135%;
	width:100%;
	text-align:center;
	color:#ffffff;
}

.status-module {
	position:absolute;
	width:80%;
	margin-top:70%;
	margin-left:10%;
	border-radius:10px;
	text-align:center;
	background-color:#ffffff;
}

.status-icon-circle {
	position:absolute;
	height:55px;
	width:55px;
	margin-left:40%;
    border-radius: 50%;
    background-size:cover;
    margin-top:-12%;
}

.short-status-msg {
	font-size:20px;
	margin-bottom:5%;
	margin-top:10%;
}

.long-status-msg {
	font-size:12px;
	width:80%;
	margin-left:10%;
	text-align:center;
}

.contact-us-btn {
	width:90%;
	background-color:#7ed321;
	text-shadow:none;
	border:none;
	box-shadow:none;
	border-radius:2.5px;
	opacity:0.9;
	color:#ffffff;
	margin-top:2.5%;
	margin-bottom:2.5%;
}

.dismiss-btn {
	width:90%;
	background-color:#ed5f5e;
	text-shadow:none;
	border:none;
	box-shadow:none;
	border-radius:2.5px;
	opacity:0.9;
	color:#ffffff;
	margin-top:2.5%;
	margin-bottom:2.5%;
}

.close-status-btn {
	width:90%;
	background-color:#edbe5e;
	text-shadow:none;
	border:none;
	box-shadow:none;
	border-radius:2.5px;
	opacity:0.9;
	color:#ffffff;
	margin-top:2.5%;
	margin-bottom:2.5%;
}

/* NAME NUMBER MODAL */
.complete-page-modal{
	position:absolute;
	background-color:#ffffff;
	border-radius:5px;
	width:80%;
	height:300px;
	bottom:20%;
	margin-left:10%;
	margin-right:10%;
}

.complete-modal-title{
	text-align:center;
	margin-top:10%;
	margin-bottom:5%;
	font-size:20px;
}

.complete-modal-description{
	text-align:center;
	margin-top:5%;
	margin-bottom:5%;
	margin-left:10%;
	margin-right:10%;
	font-size:14px;
}

#user-name-input {
	border-width:10px;
	border-color:red;
	border-style:solid;
}

#no-reminder-btn {
	margin-top:5%;
	margin-bottom:5%;
	background-color:#9d9c9a;
}

#close-appt-btn {
	margin-top:5%;
	margin-bottom:5%;
	background-color:#9d9c9a;
}

#reminder-modal {
	height:230px;
	bottom:10%;
}

#appt-schedule-icon {
	margin-top:-18%;
	margin-left:42%;
}

#appt-confirmed-modal {
	height:230px;
}

.menu-blur {
	-webkit-filter: blur(5px);
	opacity: .3;
}

/* contact us */
#call-btn{
	position:absolute;
	bottom:12%;
}

#call-btn a{
	color:#ffffff;
	text-decoration: none;
}

#email-btn{
	position:absolute;
	bottom:3%;
	background-color:#80cfc5;
}

#contact-us-modal {
	position:absolute;
	top:35%;
	height:160px;
}

.blurry {
	background-color: rgba(0, 0, 250, 0.1);
	z-index: 5;
}

/* settings */
.settings-container {
	margin-top:50px;
	width:100%;
	height:100%;
	background-color:red;
}

.settings-label {
	color: #3d3c3a;
	height:50px;
	line-height: 50px;
	width:100%;
	padding-left:16px;
}

.settings-address-parent {
	width:100%;
	display:table;
	height:80px;
}

.settings-text-container {
	position: relative;
	width:100%;
	background-color:blue;
	border-style:solid;
	border-width:1px;
	border-color:green;
	display: table-cell;
	vertical-align: middle;
	padding-left:16px;
	padding-right:16px;
}

.settings-right-btn-address {
	float:right;
	background-image:url('../img/icon_caret_ash_right@3x.png');
	height:25px;
	width:25px;
	background-size:cover; 
	font-size:25px;
	margin-top:8px;
}

.settings-right-btn-email-phone {
	float:right;
	background-image:url('../img/icon_caret_ash_right@3x.png');
	height:25px;
	width:25px;
	background-size:cover; 
	font-size:25px;
}

.settings-address {
	float:left;
}

.settings-email {
	float:left;
}

.settings-header {
	position:absolute;
	top:0%;
	height:50px;
	line-height:50px;
	width:100%;
	background-color:#ffffff;
	z-index:5;
	font-size:20px;
}

.settings-header-text {
	float:left;
	margin-left:5px;
}

.settings-header-btn {
	float:left;
	margin-right:10px;
	background-image:url('../img/icon_close_red@3x.png');
	height:20px;
	width:20px;
	margin-top:15px;
	margin-left:16px;
	background-size:cover;
}

.settings-footer {
	position:absolute;
	bottom:0%;
	height:50px;
	line-height:50px;
	width:100%;
	background-color:#ffffff;
	z-index:5;
	font-size:20px;
	border-top-width: 1px;
	border-top-color:#9d9c9a;
	border-style:solid;
}

.settings-footer-text {
	float:left;
	margin-left:16px;
	font-size:15px;
	color:#ed5f5e;
}

.settings-footer-btn {
	float:left;
	margin-right:16px;
	background-image:url('../img/icon_caret_red_right@3x.png');
	height:25px;
	width:25px;
	margin-top:12px;
	background-size:cover;
	position:absolute;
	right:0px;
}

.settings-btn-positive {
	color: #ffffff;
	background-color:#ed5f5e;
	font-family: Helvetica Neue, Helvetica;
	font-size: 15px;
	font-weight: bold;
	text-align:center;
	height: 35px;
	text-shadow:none;
	border:none;
	box-shadow:none;
    border-radius: 4px;
    opacity: 0.9;
}

.settings-btn-negative {
	color: #ffffff;
	background-color:#fcf2db;
	font-family: Helvetica Neue, Helvetica;
	font-size: 15px;
	font-weight: bold;
	text-align:center;
	height: 35px;
	text-shadow:none;
	border:none;
	box-shadow:none;
    border-radius: 4px;
    opacity: 0.9;
}

.email-phone-text {
	color: #9d9c9a;
	float:left;
}

.address-settings {
	color: #9d9c9a;
	float:left;
}

